--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.30.2",
     "react-toastify": "^11.0.5",
-    "socket.io-client": "^4.8.3"
+    "socket.io-client": "^4.8.3",
+    "react-scripts": "5.0.1",
+    "workbox-webpack-plugin": "^7.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,9 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-scripts": "5.0.1",
-    "workbox-webpack-plugin": "^7.4.0"
   }
 }
